[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "^3.8.2"
numba = "^0.48.0"
numpy = "^1.18.2"
scipy = "^1.4.1"
scikit-learn = "^0.22.2"
networkx = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
